<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="billheader"
            type="com.kcs.billingapp.models.BillHeaderModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/bill_no" />

            <TextView
                android:id="@+id/bill_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@{billheader.formatedBillNo}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/customer" />

            <TextView
                android:id="@+id/cust_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/_10sdp"
                android:text="@{billheader.customer_name}" />

            <TextView
                android:id="@+id/edit_bill"
                style="@style/positive_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="@dimen/_10sdp"
                android:text="@string/edit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/tot_amt" />

            <TextView
                android:id="@+id/tot_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@{billheader.formatedTotal}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/date_amp_time" />

            <TextView
                android:id="@+id/date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@{billheader.formatedTime}" />
        </LinearLayout>
    </LinearLayout>
</layout>