<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="billdetailmodel"
            type="com.kcs.billingapp.models.BillDetailModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView

                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/product_name" />

            <TextView
                android:id="@+id/prd_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@{billdetailmodel.prd_name}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/qty" />

            <TextView
                android:id="@+id/prd_qty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/_10sdp"
                android:text="@{billdetailmodel.formatedQty}" />

            <TextView
                android:id="@+id/delete_product"
                style="@style/negative_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="@dimen/_10sdp"
                android:text="@string/delete" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/rate" />

            <TextView
                android:id="@+id/prd_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@{billdetailmodel.formatedRate}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/amount" />

            <TextView
                android:id="@+id/prd_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@{billdetailmodel.formatedAmt}" />
        </LinearLayout>
    </LinearLayout>
</layout>