<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addProductViewModel"
            type="com.kcs.billingapp.viewmodels.AddProductViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addproduct_ti_productname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/addproduct_et_productname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:addTextChangedListener="@{addProductViewModel.getProductNameWatcher}"
                android:hint="@string/product_name"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:minLines="1"
                android:text="@{addProductViewModel.productName}" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addproduct_ti_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/addproduct_et_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:addTextChangedListener="@{addProductViewModel.getRateWatcher}"
                android:hint="@string/rate"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:minLines="1"
                android:text="@{addProductViewModel.rate}" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                style="@style/positive_button_style"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:onClick="@{addProductViewModel.onSaveClick()}"
                android:text="@string/save" />

            <TextView
                style="@style/negative_button_style"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:onClick="@{addProductViewModel.onCancelClick()}"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</layout>